fix: icons size   icons are too big with vite, so was adjuste using rem unit

--- a/app/javascript/stylesheets/icons.css
+++ b/app/javascript/stylesheets/icons.css
@@ -1,3 +1,7 @@
 span[class*="material-symbols-"] {
-  font-size: 34px;
+  font-size: 1.1rem;
+}
+
+span[class*="material-symbols-"].lg {
+  font-size: 1.9rem;
 }
